--- a/examples/blue-green/hooks.yaml
+++ b/examples/blue-green/hooks.yaml
@@ -16,7 +16,7 @@ spec:
           - "-X"
           - "POST"
           - "--data-urlencode"
-          - "payload={\"channel\": \"#somechannel\", \"username\": \"hello\", \"text\": \"App Sync succeeded\", \"icon_emoji\": \":ghost:\"}"
+          - "payload={\"channel\": \"#somechannel\", \"username\": \"hello\", \"text\": \"App Sync succeeded\!", \"icon_emoji\": \":ghost:\"}"
           - "https://hooks.slack.com/services/..."
       restartPolicy: Never
   backoffLimit: 2
