--- a/examples/blue-green/hooks.yaml
+++ b/examples/blue-green/hooks.yaml
@@ -12,11 +12,12 @@ spec:
       - name: slack-notification
         image: curlimages/curl
         command:
-          - "curl"
-          - "-X"
-          - "POST"
-          - "--data-urlencode"
-          - "payload={\"channel\": \"#somechannel\", \"username\": \"hello\", \"text\": \"App Sync succeeded\", \"icon_emoji\": \":ghost:\"}"
-          - "https://hooks.slack.com/services/..."
+         - echo "hello"
+         # - "curl"
+         # - "-X"
+         # - "POST"
+          #- "--data-urlencode"
+        #  - "payload={\"channel\": \"#somechannel\", \"username\": \"hello\", \"text\": \"App Sync succeeded\", \"icon_emoji\": \":ghost:\"}"
+         # - "https://hooks.slack.com/services/..."
       restartPolicy: Never
   backoffLimit: 2
