--- a/examples/blue-green/hooks.yaml
+++ b/examples/blue-green/hooks.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: app-slack-notification
   annotations:
+    version: "0.1"
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
@@ -13,7 +14,5 @@ spec:
         image: curlimages/curl
         command:
          - echo "hello"
-
-
       restartPolicy: Never
   backoffLimit: 2
