--- a/examples/blue-green/bluegreen-rollout.yaml
+++ b/examples/blue-green/bluegreen-rollout.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: bluegreen-demo
+  name: oleg-bluegreen-demo
   labels:
     app: bluegreen-demo
 spec:
