--- a/examples/blue-green/kustomization.yaml
+++ b/examples/blue-green/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namePrefix: oleg-
 resources:
 - bluegreen-rollout.yaml
 - bluegreen-service.yaml
